--- a/Makefile.common
+++ b/Makefile.common
@@ -1,18 +1,19 @@
 include VERSION
+include CODEC
 
 ifndef JAVA_HOME
 $(warning Set JAVA_HOME environment variable)
 endif
 
 JAVA  := "$$JAVA_HOME/bin/java"
-JAVAC := "$$JAVA_HOME/bin/javac" 
+JAVAC := "$$JAVA_HOME/bin/javac"
 JAVAH := "$$JAVA_HOME/bin/javah"
 
 TARGET := target
 OSINFO_CLASS := org.sqlite.OSInfo
 OSINFO_PROG := lib/org/sqlite/util/OSInfo.class
 
-## building OSInfo.java 
+## building OSInfo.java
 #$(info compiling OSInfo.java)
 #$(shell mkdir -p lib)
 #$(shell $(JAVAC) src/main/java/org/sqlite/util/OSInfo.java -d lib)
@@ -62,21 +63,21 @@ Default_STRIP     := $(CROSS_PREFIX)strip
 Default_CCFLAGS   := -I$(JAVA_HOME)/include -Ilib/inc_linux -Os -fPIC -fvisibility=hidden
 Default_LINKFLAGS := -shared
 Default_LIBNAME   := libsqlitejdbc.so
-Default_SQLITE_FLAGS  := 
+Default_SQLITE_FLAGS  :=
 
 Linux-x86_CC        := $(CROSS_PREFIX)gcc
 Linux-x86_STRIP     := $(CROSS_PREFIX)strip
 Linux-x86_CCFLAGS   := -I$(JAVA_HOME)/include -Ilib/inc_linux -O2 -fPIC -m32 -fvisibility=hidden
 Linux-x86_LINKFLAGS := -shared -static-libgcc
 Linux-x86_LIBNAME   := libsqlitejdbc.so
-Linux-x86_SQLITE_FLAGS  := 
+Linux-x86_SQLITE_FLAGS  :=
 
 Linux-x86_64_CC        := $(CROSS_PREFIX)gcc
 Linux-x86_64_STRIP     := $(CROSS_PREFIX)strip
 Linux-x86_64_CCFLAGS   := -Ilib/inc_linux -I$(JAVA_HOME)/include -O2 -fPIC -m64 -fvisibility=hidden
 Linux-x86_64_LINKFLAGS := -shared -static-libgcc
 Linux-x86_64_LIBNAME   := libsqlitejdbc.so
-Linux-x86_64_SQLITE_FLAGS  := 
+Linux-x86_64_SQLITE_FLAGS  :=
 
 Linux-arm_CC          := $(CROSS_PREFIX)gcc
 Linux-arm_STRIP       := $(CROSS_PREFIX)strip
@@ -125,14 +126,14 @@ OpenBSD-x86_64_STRIP     := $(CROSS_PREFIX)strip
 OpenBSD-x86_64_CCFLAGS   := -I$(JAVA_HOME)/include -Ilib/inc_linux -O2 -fPIC -fvisibility=hidden
 OpenBSD-x86_64_LINKFLAGS := -shared
 OpenBSD-x86_64_LIBNAME   := libsqlitejdbc.so
-OpenBSD-x86_64_SQLITE_FLAGS  := 
+OpenBSD-x86_64_SQLITE_FLAGS  :=
 
 SunOS-sparcv9_CC        := $(CROSS_PREFIX)gcc
 SunOS-sparcv9_STRIP     := $(CROSS_PREFIX)strip
 SunOS-sparcv9_CCFLAGS   := -I$(JAVA_HOME)/include -Ilib/inc_linux -O2 -fPIC -m64 -fvisibility=hidden
 SunOS-sparcv9_LINKFLAGS := -shared -static-libgcc
 SunOS-sparcv9_LIBNAME   := libsqlitejdbc.so
-SunOS-sparcv9_SQLITE_FLAGS  := 
+SunOS-sparcv9_SQLITE_FLAGS  :=
 
 Mac-x86_CC        := gcc
 Mac-x86_STRIP     := strip -x
@@ -141,45 +142,44 @@ Mac-x86_LINKFLAGS := -dynamiclib
 Mac-x86_LIBNAME   := libsqlitejdbc.jnilib
 Mac-x86_SQLITE_FLAGS  := -DSQLITE_ENABLE_LOCKING_STYLE=0
 
-Mac-x86_64_CC        := gcc -arch $(OS_ARCH) 
+Mac-x86_64_CC        := gcc -arch $(OS_ARCH)
 Mac-x86_64_STRIP     := strip -x
 MAC_SDK := /Developer/SDKs/MacOSX10.10.sdk
 ifeq ($(wildcard MAC_SDK),)
 	MAC_SDK := /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk
 endif
 Mac-x86_64_CCFLAGS    := -I$(MAC_SDK)/System/Library/Frameworks/JavaVM.framework/Headers -Ilib/inc_mac -O2 -fPIC -mmacosx-version-min=10.5 -fvisibility=hidden
-Mac-x86_64_LINKFLAGS := -dynamiclib 
+Mac-x86_64_LINKFLAGS := -dynamiclib
 Mac-x86_64_LIBNAME   := libsqlitejdbc.jnilib
-Mac-x86_64_SQLITE_FLAGS  := 
+Mac-x86_64_SQLITE_FLAGS  :=
 
 Windows-x86_CC           := $(CROSS_PREFIX)gcc
 Windows-x86_STRIP        := $(CROSS_PREFIX)strip
 Windows-x86_CCFLAGS      := -D_JNI_IMPLEMENTATION_ -Ilib/inc_win -O2
 Windows-x86_LINKFLAGS    := -Wl,--kill-at -shared -static-libgcc
 Windows-x86_LIBNAME      := sqlitejdbc.dll
-Windows-x86_SQLITE_FLAGS := 
+Windows-x86_SQLITE_FLAGS :=
 
 Windows-x86_64_CC           := $(CROSS_PREFIX)gcc
 Windows-x86_64_STRIP        := $(CROSS_PREFIX)strip
 Windows-x86_64_CCFLAGS      := -D_JNI_IMPLEMENTATION_ -Ilib/inc_win -O2
 Windows-x86_64_LINKFLAGS    := -Wl,--kill-at -shared -static-libgcc
 Windows-x86_64_LIBNAME      := sqlitejdbc.dll
-Windows-x86_64_SQLITE_FLAGS := 
+Windows-x86_64_SQLITE_FLAGS :=
 
 
 CC        := $($(target)_CC)
 STRIP     := $($(target)_STRIP)
-CCFLAGS   := $($(target)_CCFLAGS) 
-LINKFLAGS := $($(target)_LINKFLAGS) 
+CCFLAGS   := $($(target)_CCFLAGS)
+LINKFLAGS := $($(target)_LINKFLAGS)
 LIBNAME   := $($(target)_LIBNAME)
 SQLITE_FLAGS := $($(target)_SQLITE_FLAGS)
 SQLITE_AMAL_PREFIX = sqlite-amalgamation-$(shell ./amalgamation_version.sh $(version))
 SQLITE_OLD_AMAL_PREFIX = sqlite-amalgamation-$(subst .,_,$(version))
-CCFLAGS := $(CCFLAGS) 
+CCFLAGS := $(CCFLAGS)
 ifneq ($(jni_include),)
 CCFLAGS := $(CCFLAGS) -I"$(jni_include)"
 endif
 ifneq ($(jni_md_include),)
 CCFLAGS := $(CCFLAGS) -I"$(jni_md_include)"
 endif
-
