--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.xerial</groupId>
   <artifactId>sqlite-jdbc</artifactId>
-  <version>3.25.3</version>
+  <version>3.26.0</version>
   <name>SQLite JDBC</name>
   <description>SQLite JDBC library</description>
-
   <parent>
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
     <version>9</version>
   </parent>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -25,7 +21,6 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-
   <developers>
     <developer>
       <id>leo</id>
@@ -40,7 +35,6 @@
       <timezone>+9</timezone>
     </developer>
   </developers>
-
   <build>
     <resources>
       <resource>
@@ -62,7 +56,7 @@
         <includes>
           <include>**/sqlite-jdbc.properties</include>
         </includes>
-      </resource>      
+      </resource>
       <resource>
         <directory>${basedir}</directory>
         <targetPath>META-INF/maven/${project.groupId}/${project.artifactId}</targetPath>
@@ -72,7 +66,6 @@
         </includes>
       </resource>
     </resources>
-
     <testResources>
       <testResource>
         <directory>src/test/java</directory>
@@ -84,7 +77,6 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -95,13 +87,11 @@
           <target>1.6</target>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.6</version>
       </plugin>
-
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.1</version>
@@ -113,7 +103,6 @@
           <connectionUrl>scm:hg:ssh://hg@bitbucket.org/xerial/sqlite-jdbc</connectionUrl>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -122,7 +111,6 @@
           <additionalparam>-Xdoclint:none</additionalparam>
         </configuration>
       </plugin>
-      
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.3.2</version>
@@ -133,8 +121,6 @@
           </archive>
         </configuration>
       </plugin>
-
-      
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
@@ -148,8 +134,6 @@
         </configuration>
       </plugin>
     </plugins>
-
-    
     <pluginManagement>
       <plugins>
         <plugin>
@@ -171,13 +155,11 @@
       </plugins>
     </pluginManagement>
   </build>
-
   <scm>
     <connection>scm:git:git://github.com/xerial/sqlite-jdbc.git</connection>
     <developerConnection>scm:git:git@github.com:xerial/sqlite-jdbc.git</developerConnection>
     <url>https://github.com/xerial/sqlite-jdbc</url>
   </scm>
-
   <profiles>
     <profile>
       <id>release-sign-artifacts</id>
@@ -207,7 +189,6 @@
       </build>
     </profile>
   </profiles>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
