--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,36 @@
 sudo: required
 os: linux
 dist: trusty
-
 services:
-  - docker
-
+- docker
 language: java
-
 matrix:
   include:
-    - stage : Build
-      jdk: openjdk7
-      if: tag IS present
-      script:
-        - bash ./scripts/travis-deploy.sh
-    -
-      jdk: oraclejdk8
-      if: tag IS present
-      script:
-        - bash ./scripts/travis-deploy.sh
-    - stage : Update
-      if: tag IS NOT present
-      script:
-        - bash ./scripts/keepSync.sh
-        
+  - stage: Build
+    jdk: openjdk7
+    if: tag IS present
+    script:
+    - bash ./scripts/travis-deploy.sh
+  - jdk: oraclejdk8
+    if: tag IS present
+    script:
+    - bash ./scripts/travis-deploy.sh
+  - stage: Update
+    if: tag IS NOT present
+    script:
+    - bash ./scripts/keepSync.sh
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y xmlstarlet
-  
+- openssl aes-256-cbc -K $encrypted_0e6f4e1fcef0_key -iv $encrypted_0e6f4e1fcef0_iv
+  -in scripts/signKey.gpg.enc -out scripts/signKey.gpg -d
+- sudo apt-get update
+- sudo apt-get install -y xmlstarlet gnupg
+- gpg --import scripts/signKey.gpg
 before_deploy:
-  - echo "Now deploying things !"
-  - git config --local user.name "Villena Guillaume"
-  - git config --local user.email "guiguivil@gmail.com"
-  - source VERSION
-
+- echo "Now deploying things !"
+- git config --local user.name "Villena Guillaume"
+- git config --local user.email "guiguivil@gmail.com"
+- source VERSION
+- make deploy
 addons:
   apt:
     sources:
@@ -41,13 +38,19 @@ addons:
     packages:
     - gcc-5
     - g++-5
-
 deploy:
   provider: releases
-  api_key: $GH_TOKEN
+  api_key: "$GH_TOKEN"
   overwrite: true
   file_glob: true
-  file: /home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar
+  file: 
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar"
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar"
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar"
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar.asc"
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar.asc"
+  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar.asc"
+
   skip_cleanup: true
   name: SQLite-jdbc-$version
   on:
