--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,13 @@ matrix:
     if: tag IS NOT present
     script:
     - bash ./scripts/keepSync.sh
+
+install:
+- mkdir -p /tmp/willena/
+- openssl aes-256-cbc -K $encrypted_0e6f4e1fcef0_key -iv $encrypted_0e6f4e1fcef0_iv -in /home/travis/build/Willena/sqlite-jdbc-crypt/scripts/private.key.enc -out /tmp/willena/private.key -d
+- gpg --import /tmp/willena/private.key
+- rm /tmp/willena/private.key
 before_install:
-- openssl aes-256-cbc -K $encrypted_0e6f4e1fcef0_key -iv $encrypted_0e6f4e1fcef0_iv
-  -in scripts/signKey.gpg.enc -out scripts/signKey.gpg -d
 - sudo apt-get update
 - sudo apt-get install -y xmlstarlet gnupg
 before_deploy:
