--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.willena</groupId>
   <artifactId>sqlite-jdbc</artifactId>
-  <version>3.31.1</version>
+  <version>3.32.0-SNAPSHOT</version>
   <name>SQLite JDBC</name>
   <description>SQLite JDBC library with encryption and authentication support</description>
   <url>https://github.com/Willena/sqlite-jdbc-crypt</url>
