--- a/.travis.yml
+++ b/.travis.yml
@@ -2,57 +2,56 @@ sudo: required
 os: linux
 dist: trusty
 services:
-- docker
+  - docker
 language: java
 matrix:
   include:
-#  - stage: Build
-#    jdk: openjdk7
-#    if: tag IS present
-#    script:
-#    - bash ./scripts/travis-deploy.sh
-  - jdk: oraclejdk8
-    if: tag IS present
-    script:
-    - bash ./scripts/travis-deploy.sh
-#  - stage: Update
-#    if: tag IS NOT present
-#    script:
-#    - bash ./scripts/keepSync.sh
+    - jdk: oraclejdk8
+      script:
+        - make
 
 install:
-- mkdir -p /tmp/willena/
-- openssl aes-256-cbc -K $encrypted_0e6f4e1fcef0_key -iv $encrypted_0e6f4e1fcef0_iv -in /home/travis/build/Willena/sqlite-jdbc-crypt/scripts/private.key.enc -out /tmp/willena/private.key -d
-- gpg --import /tmp/willena/private.key
-- rm /tmp/willena/private.key
+  - mkdir -p /tmp/willena/
+  - openssl aes-256-cbc -K $encrypted_0e6f4e1fcef0_key -iv $encrypted_0e6f4e1fcef0_iv -in /home/travis/build/Willena/sqlite-jdbc-crypt/scripts/private.key.enc -out /tmp/willena/private.key -d
+  - gpg --import /tmp/willena/private.key
+  - rm /tmp/willena/private.key
 before_install:
-- sudo apt-get update
-- sudo apt-get install -y xmlstarlet gnupg
+  - sudo apt-get update
+  - sudo apt-get install -y xmlstarlet gnupg
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 10
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 10
+  - sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30
+  - sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30
+  - sudo update-alternatives --set cc /usr/bin/gcc
+  - sudo update-alternatives --set c++ /usr/bin/g++
+  - sudo update-alternatives --set g++ "/usr/bin/g++-5"
+  - sudo update-alternatives --set gcc "/usr/bin/gcc-5"
+  - gcc -v
 before_deploy:
-- echo "Now deploying things !"
-- git config --local user.name "Villena Guillaume"
-- git config --local user.email "guiguivil@gmail.com"
-- source VERSION
-- make deploy
+  - echo "Now deploying things !"
+  - git config --local user.name "Villena Guillaume"
+  - git config --local user.email "guiguivil@gmail.com"
+  - source VERSION
+  - make deploy
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - ubuntu-toolchain-r-test
     packages:
-    - gcc-5
-    - g++-5
+      - gcc-5
+      - g++-5
 deploy:
   provider: releases
   api_key: "$GH_TOKEN"
   overwrite: true
   file_glob: true
-  file: 
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar"
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar"
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar"
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar.asc"
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar.asc"
-  - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar.asc"
+  file:
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar.asc"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar.asc"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar.asc"
 
   skip_cleanup: true
   name: SQLite-jdbc-$version
