--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_deploy:
   - echo "Now deploying things !"
   - git config --local user.name "Villena Guillaume"
   - git config --local user.email "guiguivil@gmail.com"
-  - apt get install -y zip
+  - sudo apt-get install -y zip
   - source VERSION
   - zip -r ./sqlite-natives-$version ./src/main/resources/org/sqlite/native
   - make deploy
