--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_deploy:
   - git config --local user.email "guiguivil@gmail.com"
   - sudo apt-get install -y zip
   - source VERSION
-  - zip -r ./sqlite-natives-$version ./src/main/resources/org/sqlite/native
+  - zip -r ./sqlite-natives-$version.zip ./src/main/resources/org/sqlite/native
   - make deploy
 addons:
   apt:
@@ -54,7 +54,7 @@ deploy:
     - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version.jar.asc"
     - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-javadoc.jar.asc"
     - "/home/travis/build/Willena/sqlite-jdbc-crypt/target/sqlite-jdbc-$version-sources.jar.asc"
-    - "/home/travis/build/Willena/sqlite-jdbc-crypt/sqlite-natives-$version"
+    - "/home/travis/build/Willena/sqlite-jdbc-crypt/sqlite-natives-$version.zip"
 
   skip_cleanup: true
   name: SQLite-jdbc-$version
